# Insurance-Claims-Fulfillment-Automation-System-V2

./: .env  README.md  fulfillment_processor.py  mail_monitor.py  mongodb_manager.py  pyproject.toml  start_system.py  test_mongodb_connection.py
apis/: fulfillment_api.py  mail_service.py  user_validator.py
prompts/: README.md  fulfillment_pending_email.txt  fulfillment_requirements.txt  fulfillment_system_prompt.txt  user_not_found_fallback.txt
